fixed several minor errors in the Russian translation (changed to 2023.01.12 02:08)

--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -703,7 +703,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currentAction"
  	 	 	 	],
- 	 	 	 	"trans": "Вы не можете печатать экипировку, пока ${currentAction}",
+ 	 	 	 	"trans": "Вы не можете печатать экипировку, во время ${currentAction}",
  	 	 	 	"eng": "You can't print equipment while ${currentAction}"
  	 	 	},
  	 	 	"printCache": {
@@ -719,7 +719,7 @@
  	 	 	 	"eng": "Unlock Container"
  	 	 	},
  	 	 	"cantOpenContainerNotIdleV2": {
- 	 	 	 	"trans": "Вы не можете разблокировать контейнеры, пока сейчас",
+ 	 	 	 	"trans": "Вы не можете разблокировать контейнеры, в данный момент",
  	 	 	 	"eng": "You cannot unlock containers right now"
  	 	 	},
  	 	 	"openRedEnvelop": {
@@ -730,7 +730,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Вы не можете открыть ${itemName} прямо сейчас",
+ 	 	 	 	"trans": "Вы не можете открыть ${itemName} в данный момент",
  	 	 	 	"eng": "You cannot open ${itemName} right now"
  	 	 	}
  	 	},
@@ -1192,7 +1192,7 @@
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Похоже, у тебя есть несколько ядер ИИ, используй их для ботофарма в локации соответствующего уровня.",
+ 	 	 	 	 	 	"trans": "Похоже, у тебя есть несколько Ядер ИИ, используй их для ботофарма в локации соответствующего уровня.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
@@ -1202,7 +1202,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Ты можешь получить ядра ИИ: \n         - Исследуя мусорки в разных локациях \n         - Создавать из хэш-процессоров и металлолома \n         - Получая в награда за победу над врагами во всех локациях",
+ 	 	 	 	 	 	"trans": "Ты можешь получить Ядра ИИ: \n         - Исследуя мусорки в разных локациях \n         - Создавать из хэш-процессоров и металлолома \n         - Получая в награда за победу над врагами во всех локациях",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1954,24 +1954,24 @@
  	 	 	 	 	"eng": "Core not found"
  	 	 	 	},
  	 	 	 	"subTitle": {
- 	 	 	 	 	"trans": "Пожалуйста, вставь ядро калибровки",
+ 	 	 	 	 	"trans": "Пожалуйста, вставь Ядро калибровки",
  	 	 	 	 	"eng": "Please insert Calibration Core"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Тебе нужно вставить калибровочное ядро для обновления твоего оборудования.",
+ 	 	 	 	 	"trans": "Тебе нужно вставить калибровочное Ядро для обновления твоего оборудования.",
  	 	 	 	 	"eng": "You need to insert Calibration Core to upgrade your equipment."
  	 	 	 	},
  	 	 	 	"noCore": {
- 	 	 	 	 	"trans": "У тебя нет калибровочного ядра",
+ 	 	 	 	 	"trans": "У тебя нет калибровочного Ядра",
  	 	 	 	 	"eng": "You don\\'t have any Calibration Core"
  	 	 	 	}
  	 	 	},
  	 	 	"activate": {
- 	 	 	 	"trans": "Вставить ядро",
+ 	 	 	 	"trans": "Вставить Ядро",
  	 	 	 	"eng": "Insert Core"
  	 	 	},
  	 	 	"activateDescription": {
- 	 	 	 	"trans": "Калибровочное ядро требуется для калибровки экипировки",
+ 	 	 	 	"trans": "Калибровочное Ядро требуется для калибровки экипировки",
  	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	},
  	 	 	"activating": {
@@ -5497,7 +5497,7 @@
  	 	"equipmentUpgrade": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Вставь ядро калибровки снаряжения в машину, и я помогу тебе откалибровать любое твоё снаряжение."
+ 	 	 	 	 	"Вставь Ядро калибровки снаряжения в машину, и я помогу тебе откалибровать любое твоё снаряжение."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
@@ -5732,7 +5732,7 @@
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Используйте ядра ИИ для авто-фермы, пока вас нет в игре",
+ 	 	 	 	"trans": "Используйте Ядра ИИ для авто-фермы, пока вас нет в игре",
  	 	 	 	"eng": "You can use your AI Core to Auto-Farm enemies while you AFK"
  	 	 	}
  	 	},
