fixed a few more errors in the Russian translation (changed to 2023.01.12 02:46)

--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} BTC будут внесены на счёт вышей банды, это действие нельзя будет отменить. Вы уверены?",
+ 	 	 	 	 	"trans": "${amount} BTC будут внесены на счёт вашей банды, это действие нельзя будет отменить. Вы уверены?",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -1045,7 +1045,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextSlotSize"
  	 	 	 	],
- 	 	 	 	"trans": "Потратьте BTC на расширение вашего прилавка, так аы сможете выставить на продажу больше вещей одновременно",
+ 	 	 	 	"trans": "Потратьте BTC на расширение вашего прилавка, так вы сможете выставить на продажу больше вещей одновременно",
  	 	 	 	"eng": "Spend Bitcoins to increase how many items you can put in your stall at the same time"
  	 	 	},
  	 	 	"cantEnterError": {
@@ -1135,7 +1135,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"gangName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Оккупировано ${gangName}",
+ 	 	 	 	 	"trans": "Оккупировано бандой ${gangName}",
  	 	 	 	 	"eng": "Occupied by ${gangName}"
  	 	 	 	},
  	 	 	 	"occupationPoints": {
@@ -1192,7 +1192,7 @@
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Похоже, у тебя есть несколько Ядер ИИ, используй их для ботофарма в локации соответствующего уровня.",
+ 	 	 	 	 	 	"trans": "Похоже, у тебя есть несколько Ядер ИИ, используй их для AFK-фарма в локации соответствующего уровня.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
@@ -1246,7 +1246,7 @@
  	 	 	 	"eng": "rewards"
  	 	 	},
  	 	 	"rewardAvailable": {
- 	 	 	 	"trans": "Нажми, чтобы собрать награду",
+ 	 	 	 	"trans": "Нажми, чтобы забрать награду",
  	 	 	 	"eng": "Click to collect reward"
  	 	 	},
  	 	 	"viewDetails": {
@@ -1262,7 +1262,7 @@
  	 	},
  	 	"suspended": {
  	 	 	"title": {
- 	 	 	 	"trans": "Приостановленно",
+ 	 	 	 	"trans": "Приостановлено",
  	 	 	 	"eng": "Suspended"
  	 	 	},
  	 	 	"description": {
@@ -1560,7 +1560,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Присвоить ранг банды ${playerName}",
+ 	 	 	 	 	"trans": "Присвоить ранг в банде игроку ${playerName}",
  	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
  	 	 	 	},
  	 	 	 	"description": {
@@ -1581,7 +1581,7 @@
  	 	 	 	 	 	 	 	"minLength",
  	 	 	 	 	 	 	 	"maxLength"
  	 	 	 	 	 	 	],
- 	 	 	 	 	 	 	"trans": "Имя ранга должно быть между ${minLength} и ${maxLength} символов",
+ 	 	 	 	 	 	 	"trans": "Длина названия ранга, должна быть от ${minLength} до ${maxLength} символов",
  	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
  	 	 	 	 	 	}
  	 	 	 	 	}
@@ -1603,7 +1603,7 @@
  	 	 	 	 	"eng": "Assign Rank"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "выгнать игрока",
+ 	 	 	 	 	"trans": "Выгнать игрока",
  	 	 	 	 	"eng": "kick player"
  	 	 	 	}
  	 	 	},
@@ -1736,7 +1736,7 @@
  	 	 	 	},
  	 	 	 	"selectConfirm": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Выберите эмблему?",
+ 	 	 	 	 	 	"trans": "Выбрать эмблему?",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
  	 	 	 	}
@@ -2444,7 +2444,7 @@
  	 	 	 	"eng": "EXP Buff (Currently ${current}%)"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Увеличьте увеличение Exp на 80% за 20 минут",
+ 	 	 	 	"trans": "Увеличьте прирост опыта на 80% за 20 минут",
  	 	 	 	"eng": "Increase your EXP gain by 80% for 20 minutes"
  	 	 	},
  	 	 	"button": {
@@ -2638,7 +2638,7 @@
  	 	 	"eng": "Requires you to be in a gang"
  	 	},
  	 	"requireTopGang": {
- 	 	 	"trans": "Необходимо, чтобы ты входил в топ-2 банд по влиянию",
+ 	 	 	"trans": "Необходимо, чтобы ты был в Банде из Топ-2 по влиянию",
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
@@ -3260,7 +3260,7 @@
  	},
  	"sessionClosedScreen": {
  	 	"title": {
- 	 	 	"trans": "Вы вошли на другое устройство",
+ 	 	 	"trans": "Вы вошли с другого устройства",
  	 	 	"eng": "You have logged in on another device"
  	 	},
  	 	"description": {
@@ -3268,13 +3268,13 @@
  	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
  	 	},
  	 	"restartApp": {
- 	 	 	"trans": "Воссоединиться сейчас",
+ 	 	 	"trans": "Переподключиться",
  	 	 	"eng": "Reconnect Now"
  	 	}
  	},
  	"slider": {
  	 	"min": {
- 	 	 	"trans": "Мин",
+ 	 	 	"trans": "Минимум",
  	 	 	"eng": "Min"
  	 	},
  	 	"max": {
@@ -3580,7 +3580,7 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation9": {
- 	 	 	"trans": "Кибер Кролик",
+ 	 	 	"trans": "КиберКролик",
  	 	 	"eng": "CyberBunny"
  	 	},
  	 	"donation10": {
@@ -3588,19 +3588,19 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation11": {
- 	 	 	"trans": "Кибер Котенок",
+ 	 	 	"trans": "КиберКитти",
  	 	 	"eng": "CyberKitty"
  	 	},
  	 	"donation12": {
- 	 	 	"trans": "Кибер Санта",
+ 	 	 	"trans": "КиберСанта",
  	 	 	"eng": "CyberSanta"
  	 	},
  	 	"donation13": {
- 	 	 	"trans": "Кибер Мороз",
+ 	 	 	"trans": "КиберМороз",
  	 	 	"eng": "CyberFrost"
  	 	},
  	 	"donation14": {
- 	 	 	"trans": "Кибер Дракон",
+ 	 	 	"trans": "КиберДракон",
  	 	 	"eng": "Cyberdragon"
  	 	},
  	 	"donation15": {
@@ -3912,7 +3912,7 @@
  	 	"donation9": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Титул \"Престиж\"",
+ 	 	 	 	 	"trans": "Титул \"КиберКролик\"",
  	 	 	 	 	"eng": "\"CyberBunny\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3992,7 +3992,7 @@
  	 	"donation11": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "«Cyberkitty» название пожертвования",
+ 	 	 	 	 	"trans": "«КиберКитти» название пожертвования",
  	 	 	 	 	"eng": "\"CyberKitty\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4032,7 +4032,7 @@
  	 	"donation12": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Название пожертвования \"Cybersanta\"",
+ 	 	 	 	 	"trans": "Название пожертвования «КиберСанта»",
  	 	 	 	 	"eng": "\"CyberSanta\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4072,7 +4072,7 @@
  	 	"donation13": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Название пожертвования \"Cyberfrost\"",
+ 	 	 	 	 	"trans": "Название пожертвования «КиберМороз»",
  	 	 	 	 	"eng": "\"CyberFrost\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4112,7 +4112,7 @@
  	 	"donation14": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Название пожертвования \"Cyberdragon\"",
+ 	 	 	 	 	"trans": "Название пожертвования «КиберДракон»",
  	 	 	 	 	"eng": "\"Cyberdragon\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4152,7 +4152,7 @@
  	 	"donation15": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Название пожертвования \"Prestige\"",
+ 	 	 	 	 	"trans": "Название пожертвования «Престиж»",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -7237,7 +7237,7 @@
  	 	 	"eng": "benefits"
  	 	},
  	 	"title": {
- 	 	 	"trans": "Уровени пожертвования",
+ 	 	 	"trans": "Уровни пожертвования",
  	 	 	"eng": "Donation Tiers"
  	 	},
  	 	"monthlySubscription": {
@@ -7252,7 +7252,7 @@
  	 	 	"eng": "${price} USD Per Month"
  	 	},
  	 	"TiersTitle": {
- 	 	 	"trans": "Уровени пожертвования",
+ 	 	 	"trans": "Уровни пожертвования",
  	 	 	"eng": "Donation Tiers"
  	 	},
  	 	"unitPrice": {
