Correction of the Russian translation for the red envelope and a few more minor errors (changed to 2023.01.12 13:28)

--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Люди Украины, России и всего мира страдают из-за амбиций одного человека. \r\n Занимайтесь любовью, а не войной.",
+ 	 	 	 	"trans": "Люди Украины, России и всего мира страдают из-за амбиций одного человека. \\n Занимайтесь любовью, а не войной.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -402,7 +402,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Чат банды будет доступен, когда вы вступите в банду. \r\n Вступите в банду, заводя друзей в глобальном чате или создайте свою собственную банду и пригласите туда своих друзей!",
+ 	 	 	 	 	"trans": "Чат банды будет доступен, когда вы вступите в банду.\\nВступите в банду, заводя друзей в глобальном чате или создайте свою собственную банду и пригласите туда своих друзей!",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
@@ -723,7 +723,7 @@
  	 	 	 	"eng": "You cannot unlock containers right now"
  	 	 	},
  	 	 	"openRedEnvelop": {
- 	 	 	 	"trans": "Открытым",
+ 	 	 	 	"trans": "Открыть",
  	 	 	 	"eng": "Open"
  	 	 	},
  	 	 	"cannotOpenRedEnvelopNotIdle": {
@@ -1202,7 +1202,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Ты можешь получить Ядра ИИ: \n         - Исследуя мусорки в разных локациях \n         - Создавать из хэш-процессоров и металлолома \n         - Получая в награда за победу над врагами во всех локациях",
+ 	 	 	 	 	 	"trans": "Ты можешь получить Ядра ИИ: \r\n         - Исследуя мусорки в разных локациях \r\n         - Создавать из хэш-процессоров и металлолома \r\n         - Получая в награда за победу над врагами во всех локациях",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -3264,7 +3264,7 @@
  	 	 	"eng": "You have logged in on another device"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Если вы хотите продолжать играть на этом устройстве, нажмите \"Воспитание\".",
+ 	 	 	"trans": "Если вы хотите продолжать играть на этом устройстве, нажмите «Воспитание».",
  	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
  	 	},
  	 	"restartApp": {
@@ -3992,7 +3992,7 @@
  	 	"donation11": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "\"КиберКитти\" название пожертвования",
+ 	 	 	 	 	"trans": "«КиберКитти» название пожертвования",
  	 	 	 	 	"eng": "\"CyberKitty\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4032,7 +4032,7 @@
  	 	"donation12": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Название пожертвования \"КиберСанта\"",
+ 	 	 	 	 	"trans": "Название пожертвования «КиберСанта»",
  	 	 	 	 	"eng": "\"CyberSanta\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4072,7 +4072,7 @@
  	 	"donation13": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Название пожертвования \"КиберМороз\"",
+ 	 	 	 	 	"trans": "Название пожертвования «КиберМороз»",
  	 	 	 	 	"eng": "\"CyberFrost\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4112,7 +4112,7 @@
  	 	"donation14": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Название пожертвования \"КиберДракон\"",
+ 	 	 	 	 	"trans": "Название пожертвования «КиберДракон»",
  	 	 	 	 	"eng": "\"Cyberdragon\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4152,7 +4152,7 @@
  	 	"donation15": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Название пожертвования \"Престиж\"",
+ 	 	 	 	 	"trans": "Название пожертвования «Престиж»",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -5008,7 +5008,7 @@
  	 	 	 	 	"time",
  	 	 	 	 	"costMult"
  	 	 	 	],
- 	 	 	 	"trans": "В то время как Shard активен, все игроки могут запустить определенные задачи AFK в режиме Boost ™, получая ${rewardMult} x вознаграждение, одновременно увеличивая стоимость и продолжительность на ${costMult} x. \\ n * Этот элемент все еще является бета -версией и подлежит изменению баланса, используйте сразу после покупки *",
+ 	 	 	 	"trans": "В то время как Shard активен, все игроки могут запустить определенные задачи AFK в режиме Boost Mode™, получая ${rewardMult}x вознаграждение, одновременно увеличивая стоимость и продолжительность на ${costMult}x. \\n * Этот элемент все еще является бета-версией и подлежит изменению баланса, используйте сразу после покупки *",
  	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
  	 	 	}
  	 	},
@@ -5018,7 +5018,7 @@
  	 	 	 	"eng": "Red Envelope"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Красный конверт с золотой цифровой уплотнением. Похоже, он содержит какую -то валюту",
+ 	 	 	 	"trans": "Красный конверт с золотой цифровой печатью. Похоже, что он содержит какую-то валюту",
  	 	 	 	"eng": "A red envelope with a golden digital seal on it. looks like it contains some sort of currency"
  	 	 	}
  	 	},
@@ -5028,7 +5028,7 @@
  	 	 	 	"eng": "Golden Coin"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Золотая монета с гравировкой дракона на нем. Физическая валюта очень редко можно увидеть в наши дни, должна быть в состоянии купить что -то хорошее с ней в рыночном районе",
+ 	 	 	 	"trans": "Золотая монета с гравировкой дракона на нем. Физическая валюта очень редко можно увидеть в наши дни, должна быть в состоянии купить что-то хорошее с ней в рыночном районе",
  	 	 	 	"eng": "A golden coin with a engraving of a dragon on it. physical currency is very rare to see these days, should be able to buy something good with it in the market district"
  	 	 	}
  	 	},
@@ -5041,7 +5041,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Эти пельмени не похожи ни на один другой. Сделано с любовью и уходом иены, эти восхитительные карманы добра заполнены лучшими ингредиентами и приготовлены до совершенства",
+ 	 	 	 	"trans": "Эти пельмени не похожи ни на какие другие. Сделанные с любовью и заботой Йен, эти восхитительные \"карманы добра\" наполнены лучшими ингредиентами и приготовлены до совершенства.\\n Восстанавливают здоровье на ${percent}% при употреблении",
  	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
  	 	 	}
  	 	},
@@ -5054,7 +5054,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Липкий и сладкий рисовый торт - это традиционная лунная новогодняя еда и, как полагают, приносит удачу и процветание. \\ n восстановить ${percent}% щит при потреблении",
+ 	 	 	 	"trans": "Липкий и сладкий рисовый пирог — это традиционная еда Лунного Нового года, которая, как считается, приносит удачу и процветание.\\n восстанавливает щит на ${percent}% при употреблениии",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
@@ -7138,7 +7138,7 @@
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Жалоба будет отправлена модераторам автоматически. \nПожалуйста, не делайте репорты по ошибке, не спамьте и не играйте с системой репортов",
+ 	 	 	"trans": "Жалоба будет отправлена модераторам автоматически. \\nПожалуйста, не делайте репорты по ошибке, не спамьте и не играйте с системой репортов",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
@@ -7278,7 +7278,7 @@
  	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "Этот заголовок никогда не истечет. \r\nОн останется с вашей учетной записью навсегда.",
+ 	 	 	"trans": "Этот заголовок никогда не истечет. \\nОн останется с вашей учетной записью навсегда.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
